--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
-  "name": "robsonvn/laravel-couchdb",
+  "name": "dlinny-dev/laravel-couchdb",
   "description": "A CouchDB v2.0.0 based Eloquent model and Query builder for Laravel",
   "authors": [
+    {
+      "name": "Dlinny",
+      "email": "dev@dlinny.com"
+    },
     {
       "name": "Robson Nascimento",
       "email": "robsonvnasc@gmail.com"
